# books_catalog

./: .pre-commit-config.yaml  README.md
app/: Dockerfile  Makefile  alembic.ini  default.env  docker-compose.yml  pyproject.toml  run.py  settings.py
app/base/: logging.py  repository.py  uow.py  utils.py
app/book/: models.py  routers.py  schemas.py  services.py
app/database/: __init__.py  engines.py  uow.py
app/genre/: models.py  routers.py  schemas.py
app/main/: app.py  depends.py  routers.py
app/migrations/: env.py
app/migrations/versions/: 06_09_2024_2058_7ecbf63d1880_.py  06_09_2024_2103_9c96d58054df_.py  06_10_2024_2224_69c052f0018e_.py  06_11_2024_2310_b5f7c72ef779_.py  06_12_2024_0003_d6df904c1813_.py  06_12_2024_1742_bbcfa145be49_.py
app/pg/: fixture.py  models.py
app/pg/fixtures/: book_fixture.py  genre_fixture.py  user_fixture.py
app/pg/repositories/: book_repository.py  entity_repository.py  genre_repository.py  reserve_repository.py  user_repository.py
app/tasks/: tasks.py
app/user/: models.py  routers.py  schemas.py
